[package]
name = "tarnish"
version = "0.1.0"
edition = "2024"
authors = []
description = "Process isolation library with automatic panic recovery and graceful shutdown"
license = "MIT OR Apache-2.0"
repository = ""
keywords = ["process", "isolation", "worker", "fault-tolerance"]
categories = ["concurrency", "os"]

[features]
default = ["serde"]
serde = ["dep:serde", "dep:postcard"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
postcard = { version = "1.0", features = ["alloc"], optional = true }
